# WEB_NOVA_SCI

./: .gitignore  README.md
be/: DEPLOY.md  Dockerfile  app.py  docker-compose.yml  main.py  package-lock.json  render.yaml  requirements.txt  run.sh  start.sh
be/backend/: __init__.py  app.py  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
be/backend/cart/: routes.py
be/backend/map/: routes.py
be/backend/me/: routes.py
be/backend/motion/: __init__.py  routes.py
be/backend/orders/: routes.py  tasks.py
be/backend/products/: routes.py
be/backend/services/: session_service.py
be/backend/sessions/: __init__.py  routes.py
be/backend/tests/: conftest.py  database_seed.jsonl  test_me.py  test_orders.py  test_products.py  test_users.py
be/backend/users/: routes.py
be/frontend/: .env.production  .gitignore  Dockerfile  README.md  SETUP.md  package-lock.json  package.json
be/frontend/public/: index.html
be/scripts/: generate_motion_logs.js  generate_motion_logs_vietnam.js  generate_purchase_logs.js  generate_uwb_locations.js  generate_uwb_locations_4zones.js  generate_uwb_locations_cluster.js  generate_uwb_locations_clustered.js  generate_uwb_locations_custom_4zones.js  generate_uwb_locations_extended.js  generate_uwb_locations_new_4zones.js  generate_uwb_locations_rectangle.js  generate_uwb_locations_zone_1100_1300.js  generate_uwb_locations_zone_1482_1941.js  generate_uwb_locations_zone_500_1850.js  generate_uwb_locations_zone_600_900.js  package-lock.json  package.json  test_delete_uwb_locations.js
(+17 files in other folders)
